--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
     "mongoose": "^6.2.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pdfkit": "^0.13.0",
+    "underscore": "^1.13.4"
   }
 }
